src/test/ui/regions/regions-infer-borrow-scope-too-big.nll.stderr
error[E0597]: `*p` does not live long enough
  --> $DIR/regions-infer-borrow-scope-too-big.rs:22:22
   |
LL |     let xc = x_coord(&*p); //~ ERROR `*p` does not live long enough
   |                      ^^^ borrowed value does not live long enough
...
LL | }
   | - `*p` dropped here while still borrowed
   |
note: borrowed value must be valid for the lifetime 'a as defined on the function body at 21:8...
  --> $DIR/regions-infer-borrow-scope-too-big.rs:21:8
   |
LL | fn foo<'a>(p: Box<point>) -> &'a isize {
   |        ^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0597`.
